--- a/css/structure.css
+++ b/css/structure.css
@@ -1,5 +1,10 @@
-body{
+.content{
     margin: 0;
     margin-left: 2;;
-    padding-left:  20px;
+    padding-left:  100px;
+}
+.hotel-description {
+    font-size: 14px;
+    max-width: 600px; /* optional, limit text width */
+    margin-top: 8px; /* optional spacing */
 }
