--- a/css/structure.css
+++ b/css/structure.css
@@ -13,3 +13,8 @@
     max-width: 600px; 
     margin-top: 8px; 
 }
+.activity-description {
+    font-size: 14px;
+    max-width: 600px; 
+    margin-top: 8px; 
+}
